--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dev_dependencies:
 
 environment:
   sdk: ">=2.5.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  flutter: ">=1.17.0-4.0.pre.10 <2.0.0"
 
 flutter:
   assets:
